fix square div alignment to a 16 x 16 grid

--- a/etch-a-sketch.css
+++ b/etch-a-sketch.css
@@ -1,6 +1,7 @@
 #board {
     background: plum;
     border: 4px solid indigo;
+    width: 530px;
     padding: 10px;
     display: flex;
     justify-content: center;
